--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -11,13 +11,23 @@
 
 .header nav div {
     display: flex;
-    gap: 2rem;
+    gap: 0.25rem;
 }
 
 .header nav a {
     text-decoration: none;
     color: var(--text-primary);
     cursor: pointer;
+}
+
+.link {
+    padding: .5rem .75rem;
+    border-radius: var(--border-radius);
+}
+
+.active {
+    background: var(--background);
+    transition: background var(--transition-s);
 }
 
 .iconLink {
@@ -29,12 +39,12 @@
 
 .iconLink div {
     background-color: var(--accent);
-    padding: 0.5rem;
+    padding: 0.25rem;
     border-radius: var(--border-radius);
 }
 
 
 .iconLink div svg {
-    width: 1rem;
+    width: 2rem;
     color: var(--foreground);
 }
