--- a/app/components/HomePage/Hero.tsx/hero.module.css
+++ b/app/components/HomePage/Hero.tsx/hero.module.css
@@ -2,7 +2,21 @@
     display: flex;
     flex-direction: column;
     gap: 4rem;
-    margin-top: 6rem;
+    margin-top: 4rem;
+}
+
+.hero h1 {
+    font-size: 3.5rem;
+    font-weight: bold;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 1rem;
+    letter-spacing: -0.02em;
+}
+
+.hero p {
+    margin: auto;
+    max-width: 500px;
 }
 
 .text {
@@ -19,7 +33,11 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    margin: auto;
+    margin: 2.5rem auto;
     width: 100%;
     max-width: 400px;
+}
+
+.contact small {
+    margin: auto;
 }
