--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -64,8 +64,9 @@ body {
 .chip {
   padding: 0.25rem 0.5rem;
   font-size: 0.8rem;
-  max-width: max-content;
+  width: max-content;
   border-radius: 2rem;
+  display: block;
 }
 
 a {
