--- a/app/styles/inputs.css
+++ b/app/styles/inputs.css
@@ -1,3 +1,12 @@
+.btn-icon {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.btn-icon svg {
+    width: 1rem;
+}
+
 .btn-solid {
     background-color: var(--accent);
     color: white;
